# bathymetry-tool

./: Dockerfile  README.md  extract_bathymetry.py  justfile  main.py  pipeline_segments.csv  pyproject.toml  simplified_coordinates.csv  xyz.csv
.claude/: settings.local.json
gebco/: gebco_2025_n54.0_s53.3_w-3.7_e-3.0_geotiff.tif
sampledata/: calcasieu.kmz
sampledata/spirit/: MNZ_exp_ppl_bathy_estimate_DMS_WGS84.txt
sampledata/spirit/KP_Points/: KP_Points_1m.sbn  KP_Points_1m.sbx  KP_Points_1m.shp.xml
sampledata/spirit/MNZ_Export/: MNZ_Export_Line.sbn  MNZ_Export_Line.sbx  MNZ_Export_Line.shp
sampledata/spirit/PipelinesANDCables/: KIS_ORCA_SHAPEFILE.sbn  KIS_ORCA_SHAPEFILE.sbx  KIS_ORCA_SHAPEFILE.shp  KIS_ORCA_SHAPEFILE.shx
spirit/MNZ_Export/: MNZ_Export_Line.dbf  MNZ_Export_Line.shp.xml  MNZ_Export_Line.shx
spirit/PipelinesANDCables/: KIS_ORCA_SHAPEFILE.dbf  KIS_ORCA_SHAPEFILE.shp.xml  PipelineandCables_NSTA.dbf  PipelineandCables_NSTA.sbn  PipelineandCables_NSTA.sbx  PipelineandCables_NSTA.shp  PipelineandCables_NSTA.shp.xml  PipelineandCables_NSTA.shx
src/shapefile_pipeline/: __init__.py  kml_reader.py  models.py  reader.py  segments.py  server.py
tests/: conftest.py  test_reader.py  test_server.py
